--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=minusone-server
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/minusone?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=toor
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
