feat(docs): Integrate Swagger UI and OpenAPI documentation
GitOrigin-RevId: d59d91867b11a3be34e43da188f718f93e2a174d

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ server.error.whitelabel.enabled=false
 
 app.media.storage-path=minusone-media/originals
 app.media.delivery-url=http://localhost:8080/cdn/media
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
